third_party/move/move-compiler-v2/tests/more-v1/dependencies/use_cycle_2.exp

Diagnostics:
error: invalid 'module' declaration
   ┌─ tests/more-v1/dependencies/use_cycle_2.move:5:9
   │
 5 │         0x2::B::foo()
   │         ^^^^^^^^^^^ '0x2::B' uses '0x2::A'. This 'use' relationship creates a dependency cycle.
   ·
11 │         0x2::A::foo()
   │         ----------- '0x2::A' uses '0x2::B'
